--- a/Resomar/WebContent/View/needs/editModal.html
+++ b/Resomar/WebContent/View/needs/editModal.html
@@ -1,11 +1,11 @@
 <link rel="stylesheet" href="View/needs/editModal.css">
-<div class="modal-header">
+<div class="modal-header">name="formNeedsEdit"
     <h4 class="title-header">Editar Necessidades</h4>
 </div>
 <div class="modal-body" id="modal-body">
     <form class="needs-form-modal" name="formNeedsEdit">
         <div class="row">
-            <label class="form-group col-sm-6   col-lg-6 col-xl-6 col-md-6">
+            <label class="form-group col-sm-6 col-lg-6 col-xl-6 col-md-6">
                 <select type="text" id="type" name="type" class="form-control" ng-model="needsCtrl.editNeeds.type"
                         ng-class="{'invalid': formNeeds.type.$invalid && formNeeds.type.$touched}">
                     <option value="">Tipo de Necessidade</option>
