--- a/Resomar/WebContent/View/clinic/clinic.html
+++ b/Resomar/WebContent/View/clinic/clinic.html
@@ -2,7 +2,7 @@
 <div class="clinic-register">
     <div class="card fast-acess bg-light">
         <h4 class="card-header">Cadastro de Clínica
-        <a title="Minimizar"><i ng-class="{'fas fa-window-minimize': showForm, 'fas fa-plus': !showForm}" ng-init="showForm = true" ng-click="showForm = !showForm"></i></a>
+        <a title="Minimizar"><i ng-class="{'fas fa-window-minimize': showForm, 'fas fa-plus': !showForm}" ng-init="showForm = false" ng-click="showForm = !showForm"></i></a>
         </h4>
         <form class="clinic-form" name="formClinicRegister" ng-show="showForm">
             <div class="row">
