--- a/Resomar/WebContent/View/home/home.html
+++ b/Resomar/WebContent/View/home/home.html
@@ -44,7 +44,7 @@
                         <span>Instituições</span><i class="fas fa-building icon-dash"></i>
                         <hr>
                         <span class="quantity">10</span>
-                        <a style="text-decoration:none;" href="#/instituicao" title="Cadastrar Instituições"
+                        <a style="text-decoration:none;" href="#/ong" title="Cadastrar ONG"
                            class="fa fa-plus-circle"></a>
                     </div>
                 </div>
