--- a/Resomar/WebContent/View/guest/guest.html
+++ b/Resomar/WebContent/View/guest/guest.html
@@ -51,7 +51,8 @@
                     </div>
                 </form>
                 <div class="buttons col-md-12" style="text-align:right; margin-top: 10px">
-                    <input type="button" class="btn btn-save" ng-click="guestCtrl.validateRegister();" value="Cadastrar">
+                    <input type="button" class="btn btn-save" ng-click="guestCtrl.validateRegister();"
+                           value="Cadastrar">
                 </div>
 
             </div>
