--- a/Resomar/WebContent/View/ong/ong.html
+++ b/Resomar/WebContent/View/ong/ong.html
@@ -22,14 +22,14 @@
                 </div>
 
                 <label class="col-sm-1 col-lg-1 col-xl-1 col-md-1">
-                    <select id="estadoONG" name="estadoONG" class="form-control">
+                    <select id="estadoONG" name="estadoONG" class="form-control" ng-model="ongCtrl.newOng.state">
                         <option>UF</option>
                         <option>SC</option>
                         <option>PR</option>
                     </select>
                 </label>
                 <label class="col-sm-3 col-lg-3 col-xl-3 col-md-3">
-                    <select id="cidadeONG" name="cidadeONG" class="form-control">
+                    <select id="cidadeONG" name="cidadeONG" class="form-control" ng-model="ongCtrl.newOng.city">
                         <option>Cidade</option>
                         <option>Joinville</option>
                         <option>Blumenau</option>
